# LZSS

./: CMakeLists.txt  CMakelists.txt
.github/workflows/: cmake-single-platform.yml  msbuild.yml
2022/: lzss.cpp
